jEdit 5.5 version history
       (changes since jEdit 5.4.0)
:encoding=UTF-8:

{{{ Version 5.5pre1

Thanks to AdamS, Egor Abramovich and ... for contributing to this release.

{{{ Bug Fixes


}}}
{{{ UI Improvements


}}}
{{{ Miscellaneous


}}}
{{{ API Changes


}}}
{{{ Editing

- Patch #593 - Various small patches to modes (AdamS)

- Patch #592 - for groovy mode (Egor Abramovich)

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: