@@ -1553,7 +1553,18 @@ public class jEdit
 		}
 
 		if(view != null && retVal != null)
-			view.setBuffer(retVal);
+		{
+			if(view.getBuffer() != retVal)
+			{
+				view.setBuffer(retVal);
+				// Although gotoMarker code is set to execute its code in a runAfterIoTasks runnable,
+				// the view.setBuffer command might end up being executed after the gotoMarker code,  
+				// if so the caret might not be visible when the buffer is changed, so we scroll to
+				// caret overhere.
+				if(!view.getTextArea().isCaretVisible())
+					view.getTextArea().scrollToCaret(false);
+			}
+		}
 
 		return retVal;
 	} //}}}
@@ -4263,11 +4274,16 @@ public class jEdit
 						String[] newArgs = new String[additionalFiles.size() + args.length];
 						additionalFiles.copyInto(newArgs);
 						System.arraycopy(args, 0, newArgs, additionalFiles.size(), args.length);
-						buffer = openFiles(null,userDir,newArgs);
+						// We need to pass view to openFiles, because when a file is openened via 
+						// the command line and is not the current buffer (because other buffers are
+						// already openened) and '+line' command line argument is given, a view is 
+						// needed to scroll to the given line.
+						buffer = openFiles(view,userDir,newArgs);
 					}
 					else
 					{
-						buffer = openFiles(null,userDir,args);
+						// See comment above in if part on passing view.
+						buffer = openFiles(view,userDir,args);
 					}
 
 					if(buffer != null)
